# rusty-keys

firmware/2key-keyboard/: Cargo.toml
firmware/2key-keyboard/.cargo/: config.toml
firmware/2key-keyboard/src/: main.rs
firmware/hello/: Cargo.toml
