[package]
authors = ["Hidekazu Kobayashi <kobahide789@gmail.com>"]
name = "rusty-keys-hello"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
defmt = "0.3.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp-pico = "0.9.0"

[profile.release]
debug = 2
